Fix allowlist float containment blocking clicks on next section
The allowlist 'Add' button and input use float-left/float-right but
their parent <div> didn't contain the floats. After reordering
sections, the Email Protection heading overlapped the floated elements,
intercepting pointer events. Add overflow:hidden on the wrapper to
establish a BFC that contains the floats.

--- a/shared/scss/views/_allowlist.scss
+++ b/shared/scss/views/_allowlist.scss
@@ -78,6 +78,10 @@
     cursor: default;
 }
 
+.allowlist-actions {
+    overflow: hidden;
+}
+
 .allowlist-show-add {
     height: 17px;
     color: vars.$blue;
